ingress-resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
  rules:
    - host: localhost:5000
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-application-service
                port:
                  name: http
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-application-service
                port:
                  name: http
